--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
