--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
     "styled-components": "^6.1.13",
