--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cross-env": "^7.0.3",
+    "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.3.0",
@@ -22,6 +23,7 @@
     "react-youtube": "^10.1.0",
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
+    "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
