--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env SSL_CRT_FILE=./cert.pem SSL_KEY_FILE=./key.pem react-scripts start",
+    "start": "react-scripts start",
+    "dev": "cross-env SSL_CRT_FILE=./cert.pem SSL_KEY_FILE=./key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "rimraf build && rimraf temp && npm run build && mkdir temp && move build temp && gh-pages -d temp",
+    "prototype": "rimraf build && rimraf temp && npm run build && mkdir temp && move build temp"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
